--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="header_inner inner">
             <h1 class="header-logo">
-                <a href=""><img src="img/logo@2x.png" alt=""></a>
+                <a href=""><img src="logo@2x.png" alt=""></a>
             </h1>
             <ul class="header_nav">
                 <li><a href="" class="is_active">Card</a></li>
@@ -35,32 +35,32 @@
             <div class="card_head section_title">Card</div>
             <div class="card_items">
                 <div class="card_item">
-                    <div class="card_img"><img src="img/card-img.png" alt=""></div>
+                    <div class="card_img"><img src="card-img.png" alt=""></div>
                     <div class="card_title">タイトルタイトル</div>
                     <div class="card_text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
                 </div>
                 <div class="card_item">
-                    <div class="card_img"><img src="img/card-img.png" alt=""></div>
+                    <div class="card_img"><img src="card-img.png" alt=""></div>
                     <div class="card_title">タイトルタイトル</div>
                     <div class="card_text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
                 </div>
                 <div class="card_item">
-                    <div class="card_img"><img src="img/card-img.png" alt=""></div>
+                    <div class="card_img"><img src="card-img.png" alt=""></div>
                     <div class="card_title">タイトルタイトル</div>
                     <div class="card_text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
                 </div>
                 <div class="card_item">
-                    <div class="card_img"><img src="img/card-img.png" alt=""></div>
+                    <div class="card_img"><img src="card-img.png" alt=""></div>
                     <div class="card_title">タイトルタイトル</div>
                     <div class="card_text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
                 </div>
                 <div class="card_item">
-                    <div class="card_img"><img src="img/card-img.png" alt=""></div>
+                    <div class="card_img"><img src="card-img.png" alt=""></div>
                     <div class="card_title">タイトルタイトル</div>
                     <div class="card_text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
                 </div>
                 <div class="card_item">
-                    <div class="card_img"><img src="img/card-img.png" alt=""></div>
+                    <div class="card_img"><img src="card-img.png" alt=""></div>
                     <div class="card_title">タイトルタイトル</div>
                     <div class="card_text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
                 </div>
@@ -117,7 +117,7 @@
         <div class="price_inner inner">
             <div class="price_head section_title">Price</div>
             <div class="price_content">
-                <div class="price_image"><img src="img/price-img.png" alt=""></div>
+                <div class="price_image"><img src="price-img.png" alt=""></div>
                 <div class="price_table">
                     <table class="table">
                         <tr>
@@ -223,7 +223,7 @@
         <div class="footer_inner inner">
             <div class="footer_content">
                 <div class="footer_left">
-                    <div class="footer_logo"><a href=""><img src="img/logo@2x.png" alt=""></a></div>
+                    <div class="footer_logo"><a href=""><img src="logo@2x.png" alt=""></a></div>
                     <div class="footer_address">住所：目的地の住所</div>
                     <div class="footer_tel">TEL：0000-00-0000</div>
                 </div>
@@ -238,9 +238,9 @@
                 </div>
                 <div class="footer_right">
                     <ul class="footer_sns">
-                        <li><a href="" target="_blank"><img src="img/twitter@2x.png" alt=""></a></li>
-                        <li><a href="" target="_blank"><img src="img/facebook@2x.png" alt=""></a></li>
-                        <li><a href="" target="_blank"><img src="img/instagram@2x.png" alt=""></a></li>
+                        <li><a href="" target="_blank"><img src="twitter@2x.png" alt=""></a></li>
+                        <li><a href="" target="_blank"><img src="facebook@2x.png" alt=""></a></li>
+                        <li><a href="" target="_blank"><img src="instagram@2x.png" alt=""></a></li>
                     </ul>
                 </div>
             </div>
@@ -248,6 +248,6 @@
         </div>
     </footer>
 
-    <div class="to_top"><a href=""><img src="img/totop@2x.png" alt=""></a></div>
+    <div class="to_top"><a href=""><img src="totop@2x.png" alt=""></a></div>
 </body>
 </html>
